			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------


  * UPDATED: URL references

  * FIXED: Atom-gc bug.  Thanks to the analysis work by Servey Tikhonov.

  * ADDED: wide character support for atoms and strings, foreign interfaces
    and some of the atom-handling predicates.

  * CLEANUP: interfaces for storing, accessing and save/load of strings.

  * ADDED: wide character encoding/decoding support for character I/O.
    See open/4 and set_stream/2.

  * MODIFIED: toplevel does not prompt if the user_input stream is not
    connected to a terminal.  Using set_stream(user_input, tty(true))
    the system can be forced to think input comes from a terminal.
    After comments from Roberto Bagnara.

  * ADDED: set_stream(S, tty(Bool)), stream_property(S, tty(Bool)) to
    find out/presume whether a terminal is attached to a stream.

  * ADDED: cyclic_term/1 and acyclic_term/1.  Paul Singleton.


VERSION 5.4.3 (October 18, 2004)
================================

  * PORT: Solaris _FILE_OFFSET_BITS issues in rc library.  Based on
    comments from Ian Collier.

  * FIXED: avoid deletion of clauses for dynamic predicates on reload.
    Hugo Ferreira.


VERSION 5.4.2 (October 02, 2004)
================================

  * FIXED: Garbage collector bug in handling trailed assignments.  This
    code is used by attributed variables, setarg/3 and backtrackable
    global variables.


VERSION 5.4.1 (September 30, 2004)
==================================

  * ADDED/MODIFIED: strip_module/3 is now a public and documented
    built-in.  The old undocumented '$strip_module'/3 has been moved
    to the backward compatibility library.  Applications should not
    notice the difference, but it is adviced to update your application
    accordingly.
